# src/commerce/products.controller.ts
@@ -7,31 +7,31 @@ import {
   UseInterceptors,
   Param,
 } from '@nestjs/common';
-import { CreateCatDto } from './dto/create-cat.dto';
-import { CatsService } from './cats.service';
-import { Cat } from './interfaces/cat.interface';
 import { RolesGuard } from '../common/guards/roles.guard';
 import { Roles } from '../common/decorators/roles.decorator';
 import { LoggingInterceptor } from '../common/interceptors/logging.interceptor';
 import { TransformInterceptor } from '../common/interceptors/transform.interceptor';
 import { ParseIntPipe } from '../common/pipes/parse-int.pipe';
 import { RoleTypes } from './../config/enums';
+import { ProductsService } from './products.service';
+import { CreateProductDto } from './dto/create-product.dto';
+import { Product } from './interfaces/Product.interface';
 
 @Controller('cats')
 @UseGuards(RolesGuard)
 @UseInterceptors(LoggingInterceptor, TransformInterceptor)
-export class CatsController {
-  constructor(private readonly catsService: CatsService) { }
+export class ProductsController {
+  constructor(private readonly productsService: ProductsService) { }
 
   @Post()
   @Roles(RoleTypes.admin)
-  async create(@Body() createCatDto: CreateCatDto) {
-    this.catsService.create(createCatDto);
+  async create(@Body() createCatDto: CreateProductDto) {
+    this.productsService.create(createCatDto);
   }
 
   @Get()
-  async findAll(): Promise<Cat[]> {
-    return this.catsService.findAll();
+  async findAll(): Promise<Product[]> {
+    return this.productsService.findAll();
   }
 
   @Get(':id')
@@ -39,6 +39,6 @@ export class CatsController {
     @Param('id', new ParseIntPipe())
     id: number,
   ) {
-    // logic
+
   }
 }
