# src/core/users.controller.ts
@@ -1,24 +1,38 @@
-import { Controller, Get, Post, Body, Param } from '@nestjs/common';
+import { Controller, Get, Post, Body, UseGuards, Param, Put, ParseIntPipe, Query } from '@nestjs/common';
 import { CreateUserDto } from './dto/create-user.dto';
 import { UsersService } from './users.service';
 import { User } from './interfaces/user.interface';
+import { AuthGuard } from '@nestjs/passport';
+import { EditUserDto } from './dto/edit-user.dto';
+import { plainToClass } from 'class-transformer';
+import { ResultList } from 'common/interfaces/result.interface';
 
 @Controller('users')
+@UseGuards(AuthGuard('jwt'))
 export class UsersController {
   constructor(private readonly usersService: UsersService) { }
 
+  @Get(':id')
+  async findOne(@Param('id') id): Promise<User> {
+    return await this.usersService.findOne(id);
+  }
+
   @Post()
-  async create(@Body() createCatDto: CreateUserDto) {
-    this.usersService.create(createCatDto);
+  async create(@Body() user: CreateUserDto) {
+    this.usersService.create(plainToClass(CreateUserDto, user));
   }
 
-  @Get()
-  async findAll(): Promise<User[]> {
-    return this.usersService.findAll();
+  @Put()
+  async update(@Body() user: EditUserDto): Promise<User> {
+    return await this.usersService.update(plainToClass(EditUserDto, user));
   }
 
-  @Get('hello')
-  async test(): Promise<string> {
-    return await this.usersService.test();
+  @Get(':size/:index')
+  async findAll(
+    @Param('index', new ParseIntPipe()) index: number = 1,
+    @Param('size', new ParseIntPipe()) size: number = 10,
+    @Query() query): Promise<ResultList<User>> {
+    return await this.usersService.findAll(index, size, query);
   }
+
 }
